<resources>
    <string name="app_name">文文。新闻</string>
    <string name="title_news">新闻</string>
    <string name="title_corona">疫情</string>
    <string name="title_search">搜索</string>
    <string name="tab_setting">分类</string>
    <string name="news_item_title">新闻题目</string>
    <string name="news_item_description">新闻描述</string>
    <string name="news_activity_title">正文</string>
    <string name="tab_setting_selected">我的频道</string>
    <string name="tab_setting_unselected">还可添加</string>
    <string name="tab_corona_data">疫情数据</string>
    <string name="tab_corona_knowledge">疫情图谱</string>
    <string name="tab_corona_news">新闻聚类</string>
    <string name="tab_corona_scholar">知疫学者</string>
    <string name="scholar_name">Name</string>
    <string name="scholar_position">Position</string>
    <string name="scholar_bio">学者生平</string>
    <string name="scholar_edu">教育经历</string>
    <string name="scholar_work">工作经历</string>
    <string name="scholar_default">高关注学者</string>
    <string name="scholar_passed">追忆学者</string>
    <string name="entity_name">Name</string>
    <string name="entity_description">Description</string>
    <string name="entity_relation">Relations</string>
    <string name="entity_brief">Brief description</string>
    <string name="entity_property">Properties</string>
    <string name="corona_data_china">国内</string>
    <string name="corona_data_global">全球</string>
    <string name="corona_data_x_description">自开始日期的天数</string>
    <string name="corona_data_tip">提示：右划切换下一个地区</string>
    <string name="corona_data_begin_time">开始统计时间：</string>
    <string name="share">分享</string>
    <string name="theme0">疫苗</string>
    <string name="theme1">流行病</string>
    <string name="theme2">免疫</string>
    <string name="theme3">易感性</string>
    <string name="theme4">其他</string>
</resources>
