<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scholar.ScholarActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/scholar_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/scholar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:title="@string/tab_corona_scholar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/scholar_toolbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/scholar_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_back_black_24dp"
                        android:layout_marginEnd="8dp"
                        android:minWidth="100dp"
                        android:maxWidth="100dp"
                        android:maxHeight="120dp"
                        android:minHeight="120dp"
                        android:scaleType="fitCenter"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/scholar_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/scholar_name"
                            android:layout_marginBottom="10dp"
                            android:layout_marginHorizontal="6dp"
                            style="@style/ScholarName"/>
                        <TextView
                            android:id="@+id/scholar_position"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/scholar_position"
                            android:layout_marginHorizontal="6dp"
                            style="@style/ScholarPosition"/>
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scholar_bio"
                style="@style/ScholarTitle"/>
            <TextView
                android:id="@+id/scholar_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="bio"
                style="@style/ScholarContent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scholar_edu"
                style="@style/ScholarTitle"/>
            <TextView
                android:id="@+id/scholar_edu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="bio"
                style="@style/ScholarContent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scholar_work"
                style="@style/ScholarTitle"/>
            <TextView
                android:id="@+id/scholar_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="bio"
                style="@style/ScholarContent"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>